# TransactionMonitoringSystem

./: .dockerignore  .env.example  .env.preprod.example  .env.preview.example  .gitignore  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_DOCKER.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  perf.yml
backend/: Dockerfile  conftest.py  run.py
backend/app/: __init__.py  audit.py  auth.py  cli.py  config.py  csrf.py  leader.py  logging_utils.py  main.py  net.py  rate_limit.py
backend/app/analysis/: baselines.py  contract_anomaly.py  dex.py  engine.py  enrichment.py  external.py  features.py  graph.py  normalise.py  plutus_text.py  scorer_config.py  url_extraction.py
backend/app/api/: __init__.py  _params.py  analysis.py  archive.py  auth.py  backfill.py  clustering.py  contract_anomaly_read.py  entities.py  lifecycle.py  notifications_config.py  transactions.py  users.py
backend/app/auth/: __init__.py  api_key.py  deps.py  email.py  models.py  schema.py  sessions.py  tokens.py
backend/app/db/: __init__.py  archive_queries.py  clickhouse.py  clickhouse_schema.py  clickhouse_scores.py  clustering_queries.py  postgres.py  raw_store.py
backend/app/ingestion/: __init__.py  address_backfill.py  chain_time.py  input_enrichment.py  kupo_client.py  mempool_monitor.py  ogmios_client.py  ogmios_parser.py  ogmios_rpc.py  resilience.py
backend/app/models/: __init__.py  archive.py  common.py  transaction.py
backend/app/notifications/: ADDING_A_CHANNEL.md  __init__.py  config.py  dispatcher.py  payloads.py  registry.py  reports.py  triggers.py
backend/app/routers/: ui.py  websocket.py
backend/app/tasks/: analysis.py  housekeeping.py  notifications.py
backend/app/utils/: bech32.py  datetime_utils.py
backend/perf/: README.md  __init__.py  config.py  locustfile.py  report.py  results.py  run_load.sh  seed.py
backend/scripts/: init_db.py  migrate_dedup_schema.py  verify_rollback_purge.py
backend/scripts/oneoff/: README.md  _rescore_common.py  backfill_asset_policy_first_seen.py  backfill_evidence.py  migrate_risk_band_low_to_informational.py  reclassify_for_tuning_2026_06_01.py  rescore_alert_tuning_2026_06_01.py  rescore_alert_tuning_pass2_2026_06_01.py  (+3 more)
backend/tests/: conftest.py  live_fixtures.py  test_collision_detection.py  test_csrf.py  test_housekeeping.py  test_leader.py  test_log_redaction.py  test_net.py  test_perf_network_isolation.py
config/: detection.example.yaml  detection.yaml  notifications.yaml  performance.yaml
docs/: ARCHITECTURE.md  C4-ARCHITECTURE.md  CLUSTERING.md  DATA-FLOW-EXPLAINED.md  DATA-FLOW.md  LICENSES.md  PERFORMANCE.md  README.md  TECHNOLOGY-DECISIONS.md  TESTING.md  TMS_DETECTION_SPEC.md  c4-container.mmd  c4-context.mmd
docs/follow-ups/: fake_token_policy_age.md  marketplace_dex_fp_class.md
docs/integration/: clustering-engine-integration-brief.md
frontend/: .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
scripts/: backup.sh  db.sh  fetch-cardano-config.sh  reset.sh  start.sh
services/clustering/: README.md
services/clustering/backend/: .dockerignore  Dockerfile  pyproject.toml
services/clustering/backend/app/: __init__.py  cli.py  config.py  contracts.py  ids.py  jobs.py  models.py  tunables.py
services/clustering/backend/app/anomaly/: __init__.py  detect.py
services/clustering/backend/app/api/: deps.py  main.py  schemas.py
services/clustering/backend/app/api/routers/: __init__.py  anomaly.py  contracts.py  jobs.py  labels.py  runs.py  system.py
services/clustering/backend/app/blockfrost/: __init__.py  client.py  normalize.py  source.py
services/clustering/backend/app/clustering/: __init__.py  dbscan.py  evaluate.py  model.py  projection.py
services/clustering/backend/app/features/: __init__.py  explain.py  graph.py  shape.py
services/clustering/backend/app/ingest/: __init__.py  ingester.py
services/clustering/backend/app/registry/: __init__.py  bech32.py  loader.py
services/clustering/backend/app/registry/data/: overrides.json
services/clustering/backend/app/registry/data/projects/: Marlowe.json  cswap.json  dexhunter.json
services/clustering/backend/app/service/: __init__.py  _common.py  analysis.py  graph.py  history.py  labels.py  online.py  pipeline.py  projection.py  publish.py  scheduler.py  verdicts.py
services/clustering/backend/app/sources/: __init__.py  base.py  factory.py
services/clustering/backend/app/sources/host_ch/: __init__.py  source.py
services/clustering/backend/app/storage/: __init__.py  protocol.py
services/clustering/backend/app/storage/clickhouse/: __init__.py  anomaly.py  base.py  clusters.py  contracts.py  host_backed.py  hybrid.py  ingest.py  jobs.py  models.py
services/clustering/backend/config/: clustering.yaml
services/clustering/backend/scripts/: sync_contract_registry.py
services/clustering/backend/tests/: conftest.py  fakes.py  test_analysis_slot.py  test_anomaly.py  test_api.py  test_blockfrost_source.py  test_client.py  test_clustering.py  test_connect.py  test_contracts.py  test_explain.py  test_factory.py  test_feature_sets_consistency.py  test_features.py  test_history_backfill.py  test_hybrid_repo.py  test_ingester.py  test_jobs.py  test_model.py  test_model_signing.py  test_normalize.py  test_publish.py  test_registry.py  test_safe_error.py  test_scheduler.py  test_service_labels.py  test_service_online.py  test_service_pipeline.py  test_service_verdicts.py  test_storage.py  test_tunables.py  test_verdicts.py  test_window_target.py
services/clustering/backend/tests/live_db/: conftest.py  test_history_sql_live.py
services/clustering/backend/tests/sources/: harness.py  inmemory.py  test_conformance.py  test_host_ch.py
(+279 files in other folders)
