[project]
name = "tms-clustering"
version = "0.1.0"
description = "Download Cardano contract transactions, store in ClickHouse, cluster with DBSCAN, and serve to a UI."
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "clickhouse-connect>=0.8",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "kneed>=0.8",
    "networkx>=3.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Plotting deps used only by backend/notebooks (param_evaluation.ipynb), not by
# the runtime app — kept out of the production image.
notebook = [
    "matplotlib>=3.9",
    "jupyter>=1.0",
]

[project.scripts]
tms = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers are the idiomatic way to declare defaults.
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "fastapi.Path"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
